appoint section added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,40 @@ banner section start  -->
 
 <!-- service section end -->
 
+<!-- appointment section staRT -->
+
+
+<section class="appointment-section">
+
+<div class="div1">
+<div><img src="./digital-agency-main/asset/icons/phone-call.png" alt=""> 
+</div>
+<div class="div1-text">
+<p class="p-1">GET A FREE CONSULTATION </p>
+<p class="p-2">9872330000</p>
+</div>
+ </div>
+
+<div class="div2">
+<p>Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro
+    viverra libero habitasse Aut ab nibh aliqua optio veniet porro viverr.</p>
+</div>
+
+    <div class="div3">
+<button>Make Appointment</button>
+</div>    
+</section>
+
+<!-- appointment section end  -->
+
+<!-- footer start -->
+
+
+
+
+
+
+
 
 
 
